AJAX Communication - Remote Procedure Calls (GWT RPC)

--- a/war/StockWatcher.css
+++ b/war/StockWatcher.css
@@ -50,3 +50,12 @@ body {
 .negativeChange {
   color: red;
 }
+
+/* Error Message */
+.negativeChange {
+	color: red;
+}
+
+.errorMessage {
+    color: red;
+}
